# AWE_Console

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/Console/: Command.hpp  CommandResult.hpp  Console.cpp  Console.hpp  Context.hpp
tests/: CMakeLists.txt
tests/parse/: CMakeLists.txt  TestCommand.cpp  TestCommand.hpp  main.cpp
